--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com> (http://www.lieuwex.me/)",
   "license": "GPLv3",
   "dependencies": {
+    "coffee-script": "^1.8.0",
     "compression": "^1.3.0",
     "express": "^4.10.7",
     "express-minify": "^0.1.1",
