--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "github": "^0.2.3",
     "jade": "^1.8.2",
     "lastfm": "^0.9.2",
-    "marked": "^0.3.2"
+    "marked": "^0.3.2",
+    "request": "^2.51.0"
   }
 }
