--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com> (http://www.lieuwex.me/)",
   "license": "GPLv3",
+  "engines": {
+	  "node": "0.10.x"
+  },
   "dependencies": {
     "coffee-script": "^1.8.0",
     "compression": "^1.3.0",
