--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "github": "^0.2.3",
     "jade": "^1.8.2",
     "lastfm": "^0.9.2",
+    "lodash": "^3.9.3",
     "marked": "^0.3.2",
-    "nimble": "0.0.2",
     "request": "^2.51.0"
   }
 }
