--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.10.7",
     "express-minify": "^0.1.3",
     "github": "^0.2.3",
+    "highlight.js": "^8.7.0",
     "jade": "^1.8.2",
     "lastfm": "^0.9.2",
     "lodash": "^3.9.3",
