--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "lastfm": "^0.9.2",
     "lodash": "^4.13.1",
     "marked": "^0.3.2",
-    "request": "^2.51.0"
+    "node-fetch": "^1.5.3"
   }
 }
