--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   },
   "author": "Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com> (http://www.lieuwe.xyz/)",
   "dependencies": {
+    "@octokit/rest": "^15.9.4",
     "coffee-script": "^1.12.7",
-    "compression": "^1.7.1",
-    "express": "^4.16.2",
+    "compression": "^1.7.3",
+    "express": "^4.16.3",
     "express-minify": "^1.0.0",
-    "github": "^13.0.1",
     "highlight.js": "^9.12.0",
-    "jade": "^1.8.2",
+    "jade": "^1.11.0",
     "lastfm": "^0.9.2",
-    "lodash": "^4.13.1",
-    "marked": "^0.3.9",
+    "lodash": "^4.17.10",
+    "marked": "^0.3.19",
     "node-fetch": "^1.7.3"
   }
 }
