--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.11",
     "marked": "^0.6.0",
     "node-fetch": "^2.3.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "rss-generator": "0.0.3"
   }
 }
